Fix chords align

--- a/client/src/css/SongInfo.css
+++ b/client/src/css/SongInfo.css
@@ -3,4 +3,5 @@
     position: absolute;
     width: calc(100vw);
     top: -20px;
+    text-align: right;
 }
